--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,16 +1,17 @@
 // ==================
 // color
 $green-1: #008830;
-$green-2: #00B849;
-$green-3: #00D154;
-$green-4: #00EB5E;
-$gray-1: #333333;
-$gray-2: #4D4D4D;
+$green-2: #00b849;
+$green-3: #00d154;
+$green-4: #00eb5e;
+$gray-1: #333;
+$gray-2: #4d4d4d;
 $gray-3: #707070;
-$gray-4: #D9D9D9;
-$gray-5: #F8F9FA;
-$white: #FFFFFF;
-$link: #006CA8;
+$gray-4: #d9d9d9;
+$gray-5: #f8f9fa;
+$white: #fff;
+$link: #006ca8;
+$emergency: #FFE200;
 
 // ==================
 // shadow
