--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -130,3 +130,14 @@ $z-index-map: (
     }
   }
 }
+
+// ===================
+// Vuetify
+
+// Expansion Panels
+// https://vuetifyjs.com/en/components/expansion-panels/
+$expansion-panel-content-padding: 0;
+$expansion-panel-header-padding: 10px 0;
+$expansion-panel-header-min-height: 26px;
+$expansion-panel-active-header-min-height: 26px;
+$expansion-panel-header-font-size: .875rem;
